# NNmnist

./: .gitignore  README.md  dashboard.py  pyproject.toml
dashboard/: load_data.py  plots.py
my_nn/: __main__.py  layers.py  nn.py  utils.py
my_nn/architecture/: layers.py  loss.py
