[tool.poetry]
name = "nnmnist"
version = "0.0.1"
description = "Recognition of mnist digits"
authors = ["Sergei Kolesnik <kolesniksn2510@gmail.com>"]
packages = [
    {include = "my_nn"}
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
