[tool.poetry]
name = "nnmnist"
version = "0.0.1"
description = "Recognition of mnist digits"
authors = ["Sergei Kolesnik <kolesniksn2510@gmail.com>"]
packages = [
    {include = "my_nn"}
]

[tool.poetry.dependencies]
python = ">=3.8,<=3.9"
numpy = "^1.22.1"
tensorflow = "^2.7.0rc0"
scipy = "^1.7.3"
jupyter = "^1.0.0"
torch = "^1.10.2"
sklearn = "^0.0"
matplotlib = "^3.5.1"
streamlit = "^1.5.1"
streamlit-drawable-canvas = "^0.8.0"
scikit-image = "^0.19.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

